--- a/index.html
+++ b/index.html
@@ -6,20 +6,39 @@
     <title>... Loading 2024</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            margin: 20% 0;
-            background-color: #000;
-            color: #fff;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
         }
 
         h1 {
+            font-family: 'Arial', sans-serif;
             font-size: 4em;
+            color: #fff;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
         }
 
         footer {
-            margin-top: 20px;
             color: #888;
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
         }
 
         @keyframes flashing {
@@ -34,6 +53,11 @@
     </style>
 </head>
 <body>
+    <video autoplay muted loop>
+        <source src="Friends Test.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <h1><span>...</span> Loading 2024</h1>
     
     <footer>
