--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <video autoplay muted loop>
+    <video autoplay loop>
         <source src=""videos\FriendsTest.mp4"" type="video/mp4">
         Your browser does not support the video tag.
     </video>
