--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <video autoplay loop>
-        <source src="videos\FriendsTest.mp4" type="video/mp4">
+        <source src="videos/FriendsTest.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
