--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         h1 {
-            font-family: 'Arial', sans-serif;
+            font-family: 'courier new', sans-serif;
             font-size: 4em;
             color: #fff;
             text-align: center;
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <video autoplay loop>
+    <video autoplay muted loop>
         <source src="videos/FriendsTest.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
