--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         h1 {
-            font-family: 'courier new', sans-serif;
+            font-family: 'Monospace', sans-serif;
             font-size: 4em;
             color: #fff;
             text-align: center;
@@ -53,8 +53,8 @@
     </style>
 </head>
 <body>
-    <video autoplay muted loop>
-        <source src="videos/FriendsTest.mp4" type="video">
+    <video autoplay loop>
+        <source src="videos\FriendsTest.mp4" type="video">
         Your browser does not support the video tag.
     </video>
 
