--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         h1 {
-            font-family: 'Monospace', sans-serif;
+            font-family: 'Monospace', Monospace;
             font-size: 4em;
             color: #fff;
             text-align: center;
