--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>... Be Back Soon ...</title>
+    <title>... Loading 2024</title>
     <style>
         body {
             margin: 0;
@@ -21,8 +21,8 @@
         }
 
         h1 {
-            font-family: 'Courier', Monospace;
-            font-size: 6em;
+            font-family: 'Arial', sans-serif;
+            font-size: 4em;
             color: #fff;
             text-align: center;
             position: absolute;
@@ -54,7 +54,7 @@
 </head>
 <body>
     <video autoplay loop>
-        <source src="videos\FriendsTest.mp4" type="video">
+        <source src="videos/FriendsTest.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
