--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         h1 {
             font-family: 'Courier', Monospace;
             font-size: 6em;
-            color: #fff;
+            color: #000;
             text-align: center;
             position: absolute;
             top: 50%;
