--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         @keyframes flashing {
             0% { color: #888; }
-            50% { color: #000; }
+            50% { color: #fff; }
             100% { color: #888; }
         }
 
