--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
     </style>
 </head>
 <body>
-    <video autoplay loop>
-        <source src="videos/FriendsTest.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <img src="Gifs/GF.gif" alt="Loading GIF">
 
     <h1><span>...</span> Loading 2024</h1>
     
