--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         h1 span {
             animation: flashing 2s infinite;
         }
+
+        /* Mobile Styles */
+        @media only screen and (max-width: 600px) {
+            h1 {
+                font-size: 3em;
+            }
+        }
     </style>
 </head>
 <body>
