--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>... Be Back Soon ...</title>
     <style>
+        @font-face {
+            font-family: 'TradeGothicW01-BoldCn20';
+            src: url('Fonts/TradeGothicW01-BoldCn20_675334.woff') format('woff');
+            font-weight: bold;
+            font-style: normal;
+        }
+
         body {
             margin: 0;
             overflow: hidden;
@@ -18,7 +26,7 @@
         }
 
         h1 {
-            font-family: 'Courier', Monospace;
+            font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
             font-size: 6em;
             color: #888;
             text-align: center;
@@ -26,6 +34,7 @@
         }
 
         footer {
+            font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
             color: #888;
             margin-top: 20px;
             z-index: 1;
@@ -57,4 +66,3 @@
     </footer>
 </body>
 </html>
-
