--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: 'TradeGothicW01-BoldCn20';
-            src: url('Fonts/TradeGothicW01-BoldCn20_675334.woff') format('woff');
+            src: url('path/to/TradeGothicW01-BoldCn20.woff') format('woff');
             font-weight: bold;
             font-style: normal;
         }
@@ -25,29 +25,29 @@
             height: 100vh;
         }
 
-        h1 {
+        h1, footer {
             font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
-            font-size: 6em;
             color: #888;
             text-align: center;
             z-index: 1;
+            animation: fade 4s infinite; /* 4s duration for fade in and out, infinite for continuous loop */
+        }
+
+        h1 {
+            font-size: 6em;
         }
 
         footer {
-            font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
-            color: #888;
             margin-top: 20px;
-            z-index: 1;
         }
 
-        @keyframes flashing {
-            0% { color: #888; }
-            50% { color: #fff; }
-            100% { color: #888; }
-        }
-
-        h1 span {
-            animation: flashing 2s infinite;
+        @keyframes fade {
+            0%, 100% {
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
         }
 
         /* Mobile Styles */
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1><span>...</span> Loading 2024</h1>
+    <h1>... Loading 2024</h1>
     
     <footer>
         &copy; Taeo Arliss
