--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: 'TradeGothicW01-BoldCn20';
-            src: url('path/to/TradeGothicW01-BoldCn20.woff') format('woff');
+            src: url(Fonts/TradeGothicW01-BoldCn20.woff') format('woff');
             font-weight: bold;
             font-style: normal;
         }
