--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>... Be Back Soon ...</title>
     <style>
         @font-face {
-            font-family: 'TradeGothicW01-BoldCn20';
-            src: url(Fonts/TradeGothicW01-BoldCn20.woff') format('woff');
+            font-family: 'TradeGothicW01-BoldCn20_675334';
+            src: url('Fonts/TradeGothicW01-BoldCn20_675334.woff') format('woff');
             font-weight: bold;
             font-style: normal;
         }
