--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>... Be Back Soon ...</title>
     <style>
         @font-face {
-            font-family: 'TradeGothicW01-BoldCn20_675334';
+            font-family: 'TradeGothic';
             src: url('Fonts/TradeGothicW01-BoldCn20_675334.woff') format('woff');
             font-weight: bold;
             font-style: normal;
