--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
     <title>... Be Back Soon ...</title>
     <style>
         @font-face {
-            font-family: 'TradeGothic';
+            font-family: 'TradeGothicW01-BoldCn20';
             src: url('Fonts/TradeGothicW01-BoldCn20_675334.woff') format('woff');
             font-weight: bold;
             font-style: normal;
@@ -30,6 +29,7 @@
             color: #888;
             text-align: center;
             z-index: 1;
+            animation: fade 4s infinite; /* 4s duration for fade in and out, infinite for continuous loop */
         }
 
         h1 {
@@ -38,6 +38,15 @@
 
         footer {
             margin-top: 20px;
+        }
+
+        @keyframes fade {
+            0%, 100% {
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
         }
 
         /* Mobile Styles */
