--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
             height: 100vh;
         }
 
-        h1, footer {
+        h1 {
             font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
+            font-size: 6em;
             color: #888;
             text-align: center;
             z-index: 1;
             animation: fade 4s infinite; /* 4s duration for fade in and out, infinite for continuous loop */
         }
 
-        h1 {
-            font-size: 6em;
-        }
-
         footer {
+            font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
+            color: #888;
             margin-top: 20px;
         }
 
