--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         footer {
             font-family: 'TradeGothicW01-BoldCn20', 'Courier', Monospace;
             color: #888;
-            margin-top: 20px;
+            margin-top: 10px; /* Adjust this value to move the footer closer to the bottom */
         }
 
         @keyframes fade {
